# homelab_dwh

./: .gitignore  README.md  initial_load.py  main.py  prefect.yaml  profiles.yml  pyproject.toml  requirements.txt  sql_database_pipeline.py
docker/: metabase-compose.yaml  postgres_dwh-compose.yaml
docker/prefect/: prefect-compose.yaml  prefect-worker.Dockerfile
prefect/: prefect-worker.Dockerfile
src/homelab_dwh/erpnext/: incremental_load.py  prefect.yaml
src/homelab_dwh/erpnext/transformation/: dbt_project.yml  flow_transform.py
src/homelab_dwh/erpnext/transformation/models/marts/: sources.yml
src/homelab_dwh/erpnext/transformation/models/marts/facts/: fact_journal_entries.sql  fact_purchase_invoices.sql  fact_sales_invoices.sql
