[project]
name = "homelab-dwh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-postgres>=1.10.0",
    "dlt[postgres]>=1.25.0",
    "prefect>=3.6.27",
    "prefect-sqlalchemy>=0.6.1",
    "psycopg[binary]>=3.3.3",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.49",
]
